# EPMNOTE

./: .env.example  .gitignore  alembic.ini  create_shortcut.bat  create_shortcut.ps1  docker-compose.yml  pyproject.toml  requirements.txt  run.bat
.claude/: settings.local.json
.kiro/steering/: product.md  structure.md  tech.md
91_RefDoc/: サイト参考.md
91_RefDoc/00_自動化システム仕様概要/: 仕様概要.md
91_RefDoc/01_参考サイト・本/: EPM SaaS参考情報 Claude.md  EPM SaaS参考情報 GPT.md  EPM SaaS参考情報 Gemini.md  Note活用ChatGPT.md  Note活用Claude.md  Note活用Gemini.md
91_RefDoc/02_生成AIとのやりとり履歴/: 01_「カテゴリ × ターゲット」を整理したコンテンツマップ.md  02_記事の作成方法壁打ち_20260103.md  03_準備ページへのアドバイス.md  04_準備ページを見据えたNoteへの実装テク.md  05_記事候補.md
91_RefDoc/03_記事の作り方・自動化/: 01_Note立ち上げ手順リスト.md  02_Deep Research Prompt Template_20260103.md  03_Note運用：EPM FP&A領域 発信プロジェクト ガイダンス_20260103.md  04_Note記事 1本の構成図（ストーリー×コンテンツ設計）.md  05_画像の使い方.md
91_RefDoc/04_DeepR/: 20260107_NOTE記事作成ノウハウ_ChatGPTDeepR.md  20260107_NOTE記事作成ノウハウ_ClaudeDeepR.md  20260107_NOTE記事作成ノウハウ_GeminiDeepR.md  20260201_Claude Note記事作成自動化システム.md  20260201_GPT Note記事作成自動化システム.md  20260201_Gemini Note記事作成自動化システム.md  「締めと速報の二階建て運用」完全ガイド(Claude).md  速報」と「確定」を繋ぐ二階建て運用(Gemini).md
91_RefDoc/05_企画関係の資料/: EPM機能一覧.md
91_RefDoc/11_BOOK/: 予算管理ガイドブック.md  (+1 more)
alembic/: env.py
scripts/: seed_archive_index.py  seed_articles.py  seed_knowledge_base.py
src/: __init__.py  app.py  config.py
tests/: __init__.py  test_agents.py  test_image_service.py  test_keyword_analysis.py  test_link_service.py  test_note_uploader.py  test_theme_proposal_agent.py  test_workflow.py  test_workflow_service.py
(+40 files in other folders)
